sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
  --> tests/04-variants-with-data.rs:13:5
   |
13 |     Dyn(Box<dyn StdError>),
   |     ^^^
